some spacing and gradient fixes

--- a/styles/community.scss
+++ b/styles/community.scss
@@ -266,13 +266,13 @@
   .community-frame-7 {
     transform: scale(0.5);
     transform-origin: center right;
-    top: 3700px;
+    top: 3900px;
   }
   .dark .community-frame-8,
   .community-frame-8 {
     transform: scale(0.3);
     transform-origin: center left;
-    top: 4400px;
+    top: 4733px;
   }
   .dark .community-frame-9,
   .community-frame-9 {
